--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -18,8 +18,11 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@master
       - uses: jakejarvis/s3-sync-action@master
+    with:
+      --acl public-read --follow-symlinks --delete
     env:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
